test/e2e/test_data/custom/expectVirtualService2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
  namespace: demo
spec:
  hosts:
  - "*"
  gateways:
  - nginx-gateway
  http:
  - route:
    - destination:
        host: nginx-service
      weight: 50
    - destination:
        host: nginx-service-canary
      weight: 50
